--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,39 @@
+[project]
+name = "async_rlhf"
+version = "0.1.0"
+description = "Async RLHF project"
+requires-python = ">=3.10,<3.11"
+dependencies = [
+    "torch==2.7.0",
+    "torchvision==0.22.0",
+    "trl==0.9.4",
+    "peft==0.10.0",
+    "wandb",
+    "deepspeed",
+    "transformers>=4.51.1,<4.53",
+    "vllm>=0.9,<0.10",
+]
+
+[tool.uv.sources]
+torch = [
+  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
+  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
+]
+torchvision = [
+  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
+  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
+
+[[tool.uv.index]]
+name = "pytorch-cu128"
+url = "https://download.pytorch.org/whl/cu128"
+explicit = true
+
 [tool.ruff]
 lint.ignore = ["E501", "E741", "W605"]
 lint.select = ["E", "F", "I", "W"]
